--- a/index.html
+++ b/index.html
@@ -56,6 +56,24 @@
       </nav>
 
       <section class="main">
+        <div class="main-top">
+          <p> Explore the Universe</p>
+        </div>
+        <div class="main-body">
+          <h1>Recent Jobs</h1>
+        </div>
+        <div class="search_bar">
+          <input type="search" placeholder="Seacrh job here...">
+          <select name="" id="">
+            <option value="">Category</option>
+            <option value="">Web Design</option>
+            <option value="">App Design</option>
+            <option value="">Web Development</option>
+          </select>
+          <select name="" id="" class="filter">
+            <option value="">Filter</option>
+          </select>
+        </div>
 
       </section>
     </div>
